--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,58 @@
     transform: rotate(360deg);
   }
 }
+.title {
+  color: #000;
+}
+
+.table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+  border-collapse: collapse;
+}
+
+.table thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #248f4f;
+}
+
+.table td, .table th {
+  text-align: inherit;
+  padding: .75rem;
+  vertical-align: top;
+  border-top: 1px solid #248f4f;
+}
+
+.table tbody tr:nth-of-type(odd) {
+  background-color: rgba(43, 173, 96, .05);
+}
+
+.load-button {
+  cursor: pointer;
+  margin: 1rem;
+  color: #fff;
+  text-shadow: 1px 1px 0 #888;
+  background-color: teal;
+  border-color: #14522d;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  outline: none;
+  float: right;
+}
+
+
+
+.active,.load-button:hover {
+  background-color: #248f4f;
+  border-color: #1e7b43;
+}
